package lld.swiggy.factory.notification;

public interface INotification {
    void sendNotification(String message);
}
