package lld.swiggy.strategy;

public interface PaymentStrategy {
    void processPayment(double amount);
}
